--- a/index.html
+++ b/index.html
@@ -21,4 +21,6 @@
       </div>
     </div>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+  <script type="application/javascript" src="index.js"></script>
 </html>
