feat: hide birthday scene

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <div>
+      <div class="birthday_scene">
         <img
           src="https://raw.githubusercontent.com/faahim/happy-birthday/master/img/lydia2.png"
           class="person"
