feat: add gift box scene

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="gift_box_scene">
+        <img class="gift_box" width="200" src="./assets/gift_box.svg" />
+      </div>
       <div class="birthday_scene">
         <img
           src="https://raw.githubusercontent.com/faahim/happy-birthday/master/img/lydia2.png"
